# DiGiTerra

./: .dockerignore  .eslintrc.cjs  .eslintrc.json  .gitignore  CONTRIBUTING.md  EMAIL_TASKS_RESPONSE.md  HANDOFF.md  HANDOFF_SUMMARY.md  ISSUES_FOUND.md  README.md  SECURITY_REVIEW.md  app.py  app_constants.py  app_helpers.py  app_state.py  desktop_app.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_flow.py
core/: __init__.py  desktop.py  flask_app.py  helpers.py
deploy/: README.md
docs/: ADVANCED_OPTIONS_INVESTIGATION.md  API_RESPONSES.md  ARCHITECTURE_RECOMMENDATIONS.md  BUILD_INSTRUCTIONS.md  CLEANUP_CHECKLIST.md  DEPENDENCIES.md  EDX_Incubator_Phase2_Application_Answers.md  EMAIL_TASKS_RESPONSE.md  HANDOFF.md  INCUBATOR_REFERENCE.md  SECURITY_REVIEW.md  SOFTWARE_ALIGNMENT.md  digiterra_classification_preprocessing_modeling_workflow.ipynb  digiterra_model_preprocessing_modeling_workflow.ipynb  documentation.md  literature_TREE_ph_stratified_ablation_predictions_rf_2026-03-01.csv  literature_TREE_ph_stratified_ablation_rf_2026-03-01.csv  literature_TREE_ph_stratified_multimodel_ablation_seed42_2026-03-01.csv  literature_TREE_ph_stratified_multimodel_best_per_model_seed42_2026-03-01.csv  literature_reey_predictions_rf_2026-03-01.csv  notebook_external_per_seed.csv  notebook_external_summary.csv  notebook_internal_per_seed.csv  notebook_internal_summary.csv  notebook_selection_table.csv  notebook_single_seed_results.csv  reey_model_eval_literature_2026-03-01.csv  smoke_external_candidates_seed0_1_per_seed.csv  (+17 more)
(+164 files in other folders)
