[project]
name = "digiterra"
version = "0.1.0"
description = "DiGiTerra ML app"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:dash"
filterwarnings = ["ignore:Matplotlib", "ignore:Fontconfig"]
